--- a/qp-version/src/qp_config.ini
+++ b/qp-version/src/qp_config.ini
@@ -1,8 +1,10 @@
 [influxdb]
-host = ricplt-influxdb.ricplt
-port = 8086
+host = 10.109.234.168
+port = 80
 user = admin
+token = qhIq6TFXk0ndJrHQAlzrjvWXq9laFBGu
 password = 
+org = influxdata
 path =
 database = RIC-Test
 uemeas = UEReports
